tests/fixtures/invalid/InvalidUseStatementOrdering.php
<?php

namespace App\Example;

use Vendor\Beta\SecondClass;
use Vendor\Alpha\FirstClass;

/**
 * Negative fixture: class imports are not sorted alphabetically (Beta before Alpha).
 */
final class InvalidUseStatementOrdering
{
}
